// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineDiagram for CR with branches going inward renders and matches snapshot 1`] = `
"<LineDiagram lineDiagram={{...}} route={{...}} directionId={1} routePatternsByDirection={{...}} services={{...}} ratingEndDate=\\"2020-03-14\\" stops={{...}} today=\\"2019-12-05\\">
  <h3>
    Stations
  </h3>
  <div className=\\"m-schedule-diagram m-schedule-diagram--inward\\">
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--terminus\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <strong className=\\"u-small-caps\\">
                Destination
                 Line
              </strong>
              <a href=\\"/stops/tree-destination\\">
                <h4>
                   
                  Destination
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/tree-stopA\\">
                <h4>
                   
                  Stop A
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--line\\" />
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--terminus\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <strong className=\\"u-small-caps\\">
                Other Destination
                 Line
              </strong>
              <a href=\\"/stops/tree-other-destination\\">
                <h4>
                   
                  Other Destination
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines m-schedule-diagram__lines--merging\\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--line\\" />
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <path className=\\"m-schedule-diagram__line-bend\\" d=\\"M5,10 v-10 h-20\\" />
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/tree-stop2\\">
                <h4>
                   
                  Stop 2
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/tree-stop1\\">
                <h4>
                   
                  Stop 1
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--terminus\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/tree-origin\\">
                <h4>
                   
                  Origin
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
  </div>
  <WrappedModal openState={false} closeModal={[Function: closeModal]} ariaLabel={{...}}>
    <Modal openState={false} closeModal={[Function: closeModal]} ariaLabel={{...}} priorPadding=\\"0px\\" paddingRight={0} />
  </WrappedModal>
</LineDiagram>"
`;

exports[`LineDiagram with branches going outward renders and matches snapshot 1`] = `
"<LineDiagram lineDiagram={{...}} route={{...}} directionId={1} routePatternsByDirection={{...}} services={{...}} ratingEndDate=\\"2020-03-14\\" stops={{...}} today=\\"2019-12-05\\">
  <h3>
    Stops
  </h3>
  <div className=\\"m-schedule-diagram m-schedule-diagram--outward\\">
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--terminus\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/tree-origin\\">
                <h4>
                   
                  Origin
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/tree-stop1\\">
                <h4>
                   
                  Stop 1
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines m-schedule-diagram__lines--merging\\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--line\\" />
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <path className=\\"m-schedule-diagram__line-bend\\" d=\\"M5,10 v-10 h-20\\" />
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/tree-stop2\\">
                <h4>
                   
                  Stop 2
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--line\\" />
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--terminus\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <strong className=\\"u-small-caps\\">
                Other Destination
                 Branch
              </strong>
              <a href=\\"/stops/tree-other-destination\\">
                <h4>
                   
                  Other Destination
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/tree-stopA\\">
                <h4>
                   
                  Stop A
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--terminus\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <strong className=\\"u-small-caps\\">
                Destination
                 Branch
              </strong>
              <a href=\\"/stops/tree-destination\\">
                <h4>
                   
                  Destination
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
  </div>
  <WrappedModal openState={false} closeModal={[Function: closeModal]} ariaLabel={{...}}>
    <Modal openState={false} closeModal={[Function: closeModal]} ariaLabel={{...}} priorPadding=\\"0px\\" paddingRight={0} />
  </WrappedModal>
</LineDiagram>"
`;

exports[`LineDiagram without branches renders and matches snapshot 1`] = `
"<LineDiagram lineDiagram={{...}} route={{...}} directionId={1} routePatternsByDirection={{...}} services={{...}} ratingEndDate=\\"2020-03-14\\" stops={{...}} today=\\"2019-12-05\\">
  <h3>
    Stops
  </h3>
  <div className=\\"m-schedule-diagram m-schedule-diagram--outward\\">
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--terminus\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/line-origin\\">
                <h4>
                   
                  Origin
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\" />
          </div>
          <div className=\\"m-schedule-diagram__features\\">
            <Component tooltipText=\\"Parking\\" tooltipOptions={{...}}>
              <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"true\\" data-selector=\\"true\\" data-original-title=\\"Parking\\" title=\\"Parking\\">
                <span className=\\"notranslate c-svg__icon-parking-default m-schedule-diagram__feature-icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </Component>
          </div>
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/line-stop1\\">
                <h4>
                   
                  Stop 1
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\">
              <Component href=\\"/schedules/Orange/line\\" tooltipText=\\"Orange Line\\" tooltipOptions={{...}}>
                <a href=\\"/schedules/Orange/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Orange Line\\" title=\\"Orange Line\\">
                  <span className=\\"m-schedule-diagram__connection\\">
                    <span className=\\"notranslate c-svg__icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
                  </span>
                </a>
              </Component>
              <Component href=\\"/schedules/Green-C/line\\" tooltipText=\\"Green Line C\\" tooltipOptions={{...}}>
                <a href=\\"/schedules/Green-C/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Green Line C\\" title=\\"Green Line C\\">
                  <span className=\\"m-schedule-diagram__connection\\">
                    <span className=\\"notranslate c-svg__icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
                  </span>
                </a>
              </Component>
            </div>
          </div>
          <div className=\\"m-schedule-diagram__features\\" />
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/line-stop2\\">
                <h4>
                  <span className=\\"notranslate c-svg__icon-alerts-triangle\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
                  <span className=\\"sr-only\\">
                    Service alert or delay
                  </span>
                   
                   
                  Stop 2
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\">
              <Component href=\\"/schedules/62/line\\" tooltipText=\\"Route 62\\" tooltipOptions={{...}}>
                <a href=\\"/schedules/62/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 62\\" title=\\"Route 62\\">
                  <span className=\\"c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus\\">
                    62
                  </span>
                </a>
              </Component>
              <Component href=\\"/schedules/67/line\\" tooltipText=\\"Route 67\\" tooltipOptions={{...}}>
                <a href=\\"/schedules/67/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Route 67\\" title=\\"Route 67\\">
                  <span className=\\"c-icon__bus-pill--small m-schedule-diagram__connection u-bg--bus\\">
                    67
                  </span>
                </a>
              </Component>
            </div>
          </div>
          <div className=\\"m-schedule-diagram__features\\">
            <Component tooltipText=\\"Accessible\\" tooltipOptions={{...}}>
              <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"true\\" data-selector=\\"true\\" data-original-title=\\"Accessible\\" title=\\"Accessible\\">
                <span className=\\"notranslate c-svg__icon-acessible-default m-schedule-diagram__feature-icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </Component>
          </div>
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop\\">
      <div style={{...}} className=\\"m-schedule-diagram__lines \\">
        <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--terminus\\">
          <svg viewBox=\\"0 10 10 10\\" height=\\"10\\" className=\\"m-schedule-diagram__line-stop\\">
            <circle r=\\"4\\" cx=\\"50%\\" />
          </svg>
        </div>
      </div>
      <div className=\\"m-schedule-diagram__content\\">
        <div className=\\"m-schedule-diagram__card\\">
          <div className=\\"m-schedule-diagram__card-left\\">
            <div className=\\"m-schedule-diagram__stop-name\\">
              <a href=\\"/stops/line-destination\\">
                <h4>
                   
                  Destination
                </h4>
              </a>
            </div>
            <div className=\\"m-schedule-diagram__connections\\">
              <Component href=\\"/schedules/BOAT-A/line\\" tooltipText=\\"Atlantis\\" tooltipOptions={{...}}>
                <a href=\\"/schedules/BOAT-A/line\\" data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"false\\" data-selector=\\"true\\" data-original-title=\\"Atlantis\\" title=\\"Atlantis\\">
                  <span className=\\"m-schedule-diagram__connection\\">
                    <span className=\\"notranslate c-svg__icon-bus-small\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
                  </span>
                </a>
              </Component>
            </div>
          </div>
          <div className=\\"m-schedule-diagram__features\\">
            <Component tooltipText=\\"Parking\\" tooltipOptions={{...}}>
              <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"true\\" data-selector=\\"true\\" data-original-title=\\"Parking\\" title=\\"Parking\\">
                <span className=\\"notranslate c-svg__icon-parking-default m-schedule-diagram__feature-icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </Component>
            <Component tooltipText=\\"Accessible\\" tooltipOptions={{...}}>
              <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"bottom\\" data-animation=\\"true\\" data-selector=\\"true\\" data-original-title=\\"Accessible\\" title=\\"Accessible\\">
                <span className=\\"notranslate c-svg__icon-acessible-default m-schedule-diagram__feature-icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </Component>
          </div>
        </div>
        <div className=\\"m-schedule-diagram__footer\\">
          <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
            View schedule
          </button>
        </div>
      </div>
    </div>
  </div>
  <WrappedModal openState={false} closeModal={[Function: closeModal]} ariaLabel={{...}}>
    <Modal openState={false} closeModal={[Function: closeModal]} ariaLabel={{...}} priorPadding=\\"0px\\" paddingRight={0} />
  </WrappedModal>
</LineDiagram>"
`;
